fix spacing issue in nav

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
   height: 27px;
   position: absolute;
   right: 40px;
-  top: 25px;
+  top: 35px;
 }
 
 nav {
@@ -30,13 +30,19 @@ nav {
   width: 100%;
   background-color: #fff;
 }
-ul {
-  margin-top: 20px;
+nav ul {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
+  margin-top: 30px;
 }
 
 li {
   list-style: none;
-  display: inline;
+ 
+  /* align-content: center;
+  align-items: center; */
 }
 
 a {
@@ -182,13 +188,13 @@ table {
 .book-info {
   margin-left: 27px;
   display: grid;
-  grid-template-columns: 250px;
+  grid-template-columns: 300px;
   grid-template-rows: repeat(3, 1fr);
 }
 
 .options {
   display: grid;
-  grid-template-columns: 3fr 1fr 3fr 1fr 2fr;
+  grid-template-columns: 1fr 1fr 1fr ;
   grid-template-rows: 1fr;
   padding-top: 20px;
 }
